--- a/stylesheet-mockup.css
+++ b/stylesheet-mockup.css
@@ -1,5 +1,29 @@
-* {
-  font-family: Sans-serif;
+header {
+	background: #4682B4;
+	height: 200px;
+  color: #FFFFFF;
+}
+
+header h1 {
+  text-align: center;
+	margin: 0;
+	padding-top: 60px;
+  font-family: 'Kalam', cursive;
+}
+
+header h2 {
+  text-align: center;
+  margin: 0;
+  padding-top:20px;
+  padding-bottom: 50px;
+  font-family: 'Big Shoulders Display', cursive;
+}
+
+.top-box {
+  height: 50px;
+  width: 100%;
+  border: 30px;
+  background: #D3D3D3;
 }
 
 body {
@@ -9,10 +33,25 @@ body {
 	line-height: 1.5em;
 }
 
-header {
-	background: #4682B4;
-	height: 200px;
-  color: #FFFFFF;
+.box {
+  height: 160px;
+  width: 550px;
+  border: 30px;
+  background: #A9A9A9;
+}
+
+.small-box {
+  height: 50px;
+  width: 550px;
+  border: 30px;
+  background: #A9A9A9;
+}
+
+.large-box {
+  height: 230px;
+  width: 550px;
+  border: 30px;
+  background: #A9A9A9;
 }
 
 ul {
@@ -22,21 +61,17 @@ ul {
   font-weight: bold;
 }
 
-header h1 {
-	margin: 0;
-	padding-top: 60px;
+li {
+  float: left;
+  display: block;
+  color: white;
+  padding: 16px;
   padding-left: 80px;
-}
-
-header h2 {
-  margin: 0;
-  padding-top:20px;
-  padding-left: 80px;
-  padding-bottom: 50px;
 }
 
 h3 {
   color: #4682B4;
+  font-family: 'Didact Gothic', sans-serif;
 }
 
 main {
@@ -57,6 +92,7 @@ aside {
   padding-bottom: 30px;
   float: right;
   width: 30%;
+  font-family: 'Didact Gothic', sans-serif;
 }
 
 .topnav {
