--- a/lesson7-stylesheet.css
+++ b/lesson7-stylesheet.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   color: #ecb722;
   font-family: 'Luckiest Guy', cursive;
-  background-image: url(file:///C:/Users/Wendi/Desktop/HTML100/portfolio/headerImage.jpg);
+  background-image: url(https://wcarnold.github.io/portfolio/headerImage.jpg);
   background-repeat: no-repeat;
   background-position: right top;
 }
